<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SurfaceView
            android:id="@+id/surface_image"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_weight="2"
            android:background="@drawable/capybara" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_start"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onImageProcessing"
                android:text="@string/start" />

            <Button
                android:id="@+id/but_stop"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onStopProccessing"
                android:text="@string/stop" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_matrix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_matrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/matrix" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_matrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:stepSize="1"
                android:valueFrom="3"
                android:valueTo="64" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_flows"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_flows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/flows" />

            <Spinner
                android:id="@+id/spinner_flows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:minHeight="48dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_processing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_type_blur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_blur" />

            <RadioGroup
                android:id="@+id/rb_type_blur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/rb_box_blur"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_box_blur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/box_blur" />

                <RadioButton
                    android:id="@+id/rb_gaussian_blur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gaussian_blur" />
            </RadioGroup>

            <TextView
                android:id="@+id/text_time_processing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_processing" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>